fix: Change list object from Collections.singletonList to `List.of`
Reason: `List.of` optimizing for small size and catch bugs easier.